--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">EchoJournal</string>
     <string name="your_echo_journal_top_bar_title">Your EchoJournal</string>
     <string name="create_record_top_bar_title">New Item</string>
+    <string name="show_more">Show more</string>
 </resources>
