--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,11 @@
     <string name="app_name">EchoJournal</string>
     <string name="your_echo_journal_top_bar_title">Your EchoJournal</string>
     <string name="create_record_top_bar_title">New Item</string>
+    <string name="recording_your_memories">Recording your memories …</string>
+    <string name="permission_required">Permission required</string>
+    <string name="grant_permission">Grant permission</string>
+    <string name="ok">OK</string>
+    <string name="audio_record_permission_permanent_declined">It seems you permanently declined microphone permission. You can go to the app setting to grant it</string>
+    <string name="audio_record_permission_not_declined">"This app needs access to your microphone so that you can hear your voice in the journal"</string>
     <string name="show_more">Show more</string>
 </resources>
