[MVP-012] All moods filter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="add_title">Add Title…</string>
     <string name="cancel">Cancel</string>
     <string name="confirm">Confirm</string>
+    <string name="all_moods">All Moods</string>
+    <string name="no_entries">No Entries</string>
+    <string name="start_recording">Start recording your first Echo</string>
 </resources>
