--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="no_entries">No Entries</string>
     <string name="start_recording">Start recording your first Echo</string>
     <string name="all_topics">All Topics</string>
+    <string name="topics">Topics</string>
 </resources>
