--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="leave_entry_dialog_message">Are you sure you want to go back? Audio will disappear and you will need to record it again</string>
     <string name="leave_entry_dialog_confirm_button">Leave</string>
     <string name="leave_entry_dialog_dismiss_button">Cancel</string>
+    <string name="settings">Settings</string>
+    <string name="my_mood">My Mood</string>
+    <string name="select_your_mood">Select default mood to apply to all new entries</string>
+    <string name="my_topics">My Topics</string>
+    <string name="select_your_topics">Select default topics to apply to all new entries</string>
 </resources>
