--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="my_topics">My Topics</string>
     <string name="select_your_topics">Select default topics to apply to all new entries</string>
     <string name="no_vibrator">No vibration capability on this device</string>
+    <string name="loading_voice_to_text">Loading data, please wait …</string>
 </resources>
